@@ -1,3 +1,10 @@
+2003-05-11  Andreas Schwab  <schwab@suse.de>
+
+	* elf32-m68k.c (elf_m68k_relocate_section): Replace ugly
+	complicated tests for unresolvable relocs with a simple direct
+	scheme using "unresolved_reloc" var.  Report some detail on
+	bfd_reloc_outofrange and similar errors.
+
 2003-05-09  Martin Schwidefsky  <schwidefsky@de.ibm.com>
 
 	* elf32-s390.c (allocate_dynrelocs, elf_s390_relocate_section):
